force-app/src/objects/c2g__ArchiveSetFilter__c.object
<CustomObject>
    <description>Custom object which will be used to store ArchiveSet filter record.</description>
    <fields>
        <fullName>c2g__ArchiveSetFilterStructure__c</fullName>
        <label>Archive Set Filter Structure</label>
        <referenceTo>c2g__ArchiveSetFilterStructure__c</referenceTo>
        <relationshipLabel>Archive Set Filters</relationshipLabel>
        <relationshipName>ArchiveSetFilters</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>c2g__FilterCriteria__c</fullName>
        <label>Filter Criteria</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Multi select</fullName>
                </value>
                <value>
                    <fullName>From</fullName>
                </value>
                <value>
                    <fullName>To</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Period</label>
        <referenceTo>c2g__codaPeriod__c</referenceTo>
        <relationshipLabel>Archive Set Filters</relationshipLabel>
        <relationshipName>ArchiveSetFilters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Year__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Year</label>
        <referenceTo>c2g__codaYear__c</referenceTo>
        <relationshipLabel>Archive Set Filters</relationshipLabel>
        <relationshipName>ArchiveSetFilters</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Archive Set Filter</label>
    <listViews>
        <fullName>c2g__All</fullName>
        <columns>NAME</columns>
        <columns>c2g__ArchiveSetFilterStructure__c</columns>
        <columns>c2g__FilterCriteria__c</columns>
        <columns>c2g__Period__c</columns>
        <columns>c2g__Year__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ARCSETF-{000000000}</displayFormat>
        <label>Archive Set Filter Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Archive Set Filters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>